--- a/web-src/examples/cbox-menu.html
+++ b/web-src/examples/cbox-menu.html
@@ -70,10 +70,10 @@
 
 <script type="text/javascript">
 
-    var cbox1 = dc.cboxMenu('#cbox1'),
-        cbox2 = dc.cboxMenu('#cbox2'),
-        cbox3 = dc.cboxMenu('#cbox3'),
-        datatable = dc.dataTable('#datatable');
+    var cbox1 = new dc.CboxMenu('#cbox1'),
+        cbox2 = new dc.CboxMenu('#cbox2'),
+        cbox3 = new dc.CboxMenu('#cbox3'),
+        datatable = new dc.DataTable('#datatable');
 
     // create a bunch of crosslinked categorical data
 
