--- a/web-src/examples/download-table.html
+++ b/web-src/examples/download-table.html
@@ -50,11 +50,11 @@
 <script type="text/javascript" src="../js/FileSaver.js"></script>
 <script type="text/javascript">
 
-var yearRingChart   = dc.pieChart("#chart-ring-year"),
-    spendHistChart  = dc.barChart("#chart-hist-spend"),
-    spenderRowChart = dc.rowChart("#chart-row-spenders");
+var yearRingChart   = new dc.PieChart("#chart-ring-year"),
+    spendHistChart  = new dc.BarChart("#chart-hist-spend"),
+    spenderRowChart = new dc.RowChart("#chart-row-spenders");
 
-var table = dc.dataTable('#table');
+var table = new dc.DataTable('#table');
 
 // use static or load via d3.csv("spendData.csv").then(function(spendData) {/* do stuff */});
 var spendData = [
