--- a/web-src/examples/multi-scatter.html
+++ b/web-src/examples/multi-scatter.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = dc.compositeChart("#test");
+var chart = new dc.CompositeChart("#test");
 d3.csv("morley.csv").then(function(experiments) {
 
   experiments.forEach(function(x) {
@@ -42,14 +42,14 @@ d3.csv("morley.csv").then(function(experiments) {
         .brushOn(false)
         .legend(dc.legend().x(70).y(10).itemHeight(13).gap(5))
         .compose([
-            dc.scatterPlot(chart)
+            new dc.ScatterPlot(chart)
                 .group(scatterGroup, "Blue Group")
                 .colors("blue"),
-            dc.scatterPlot(chart)
+            new dc.ScatterPlot(chart)
                 .group(scatterGroup, "Red Group")
                 .colors("red")
                 .valueAccessor(function (d) { return d.key[1] + 5; }),
-            dc.lineChart(chart)
+            new dc.LineChart(chart)
                 .dimension(lineDimension)
                 .group(lineGroup, "Line Group")
         ]);
