--- a/web-src/examples/select.html
+++ b/web-src/examples/select.html
@@ -59,10 +59,10 @@
 
 <script type="text/javascript">
 
-  var select1 = dc.selectMenu('#select1'),
-      select2 = dc.selectMenu('#select2'),
-      select3 = dc.selectMenu('#select3'),
-      datatable = dc.dataTable('#datatable');
+  var select1 = new dc.SelectMenu('#select1'),
+      select2 = new dc.SelectMenu('#select2'),
+      select3 = new dc.SelectMenu('#select3'),
+      datatable = new dc.DataTable('#datatable');
 
   // create a bunch of crosslinked categorical data
 
