--- a/web-src/examples/sunburst-with-value-accessor.html
+++ b/web-src/examples/sunburst-with-value-accessor.html
@@ -62,7 +62,7 @@
 
         reducer(group);
 
-        var sunBurstChart = dc.sunburstChart("#test");
+        var sunBurstChart = new dc.SunburstChart("#test");
 
         sunBurstChart
             .width(800)
