--- a/web-src/resizing/resizing-pie.html
+++ b/web-src/resizing/resizing-pie.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="dc-resizing.js"></script>
 <script type="text/javascript">
 
-var chart = dc.pieChart("#test");
+var chart = new dc.PieChart("#test");
 d3.csv("../examples/morley.csv").then(function(experiments) {
 
   var ndx           = crossfilter(experiments),
