--- a/web-src/resizing/resizing-row.html
+++ b/web-src/resizing/resizing-row.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="dc-resizing.js"></script>
 <script type="text/javascript">
 
-var chart = dc.rowChart("#test");
+var chart = new dc.RowChart("#test");
 d3.csv("../examples/morley.csv").then(function(experiments) {
 
   experiments.forEach(function(x) {
