--- a/web-src/transitions/bar-progression.html
+++ b/web-src/transitions/bar-progression.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="transition-test.js"></script>
     <script type="text/javascript">
 
-      var chart = dc.barChart("#test");
+      var chart = new dc.BarChart("#test");
       var progression = transitionTest.progression(5, 20);
       var noDimension = {};
       var progressGroup = {
