--- a/web-src/examples/area.html
+++ b/web-src/examples/area.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="../js/dc.js"></script>
     <script type="text/javascript">
 
-      var chart = dc.lineChart("#test");
+      var chart = new dc.LineChart("#test");
       d3.csv("morley.csv").then(function(experiments) {
 
           experiments.forEach(function(x) {
