--- a/web-src/examples/bar-single-select.html
+++ b/web-src/examples/bar-single-select.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = dc.barChart("#test");
+var chart = new dc.BarChart("#test");
 d3.csv("morley.csv").then(function(experiments) {
 
   experiments.forEach(function(x) {
