--- a/web-src/examples/brush-ordinal.html
+++ b/web-src/examples/brush-ordinal.html
@@ -81,7 +81,7 @@ fake group, and then another fake group provides the integer/ordinal mapping.</p
             return d3.descending(a.value, b.value);
         }));
 
-        bar = dc.barChart('#bar');
+        bar = new dc.BarChart('#bar');
         var linear_domain = [-0.5, short.length - 0.5];
         bar
             .width(1000).height(300)
@@ -123,7 +123,7 @@ fake group, and then another fake group provides the integer/ordinal mapping.</p
         }, true);
         var letterGroup = letterDimension.group();
 
-        var row = dc.rowChart('#first-letters');
+        var row = new dc.RowChart('#first-letters');
         row
             .width(1000)
             .height(350)
