--- a/web-src/examples/composite-bar-line.html
+++ b/web-src/examples/composite-bar-line.html
@@ -23,7 +23,7 @@
 <script type="text/javascript">
 
 //  var composite = dc.compositeChart("#test_composed");
-var composite = dc.compositeChart(d3.select('div.container').append('div'));
+var composite = new dc.CompositeChart(d3.select('div.container').append('div'));
 
 Promise.all([d3.csv("morley.csv"), d3.csv("morley2.csv")]).then(function(results) {
     var exp1 = results[0],
@@ -49,12 +49,12 @@ Promise.all([d3.csv("morley.csv"), d3.csv("morley2.csv")]).then(function(results
         .legend(dc.legend().x(80).y(20).itemHeight(13).gap(5))
         .renderHorizontalGridLines(true)
         .compose([
-            dc.barChart(composite)
+            new dc.BarChart(composite)
                 .dimension(dim)
                 .colors('blue')
                 .group(grp2, "Bars")
                 .centerBar(true),
-            dc.lineChart(composite)
+            new dc.LineChart(composite)
                 .dimension(dim)
                 .colors('red')
                 .group(grp1, "Dots")
