--- a/web-src/examples/focus-dynamic-data.html
+++ b/web-src/examples/focus-dynamic-data.html
@@ -27,8 +27,8 @@
         const urlParams = new URLSearchParams(window.location.search),
           remove = urlParams.get('remove');
 
-        var focus = dc.lineChart("#focus");
-        var zoom = dc.lineChart("#range");
+        var focus = new dc.LineChart("#focus");
+        var zoom = new dc.LineChart("#range");
         d3.csv("morley.csv").then(function(experiments) {
             experiments.forEach(function(x) {
                 x.Speed = +x.Speed;
