--- a/web-src/examples/number.html
+++ b/web-src/examples/number.html
@@ -42,10 +42,10 @@ We have seen a mean of <span id="mean"></span> over <span id="expn"></span> expe
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var inlineND = dc.numberDisplay("#test"),
-    boxND    = dc.numberDisplay("#number-box"),
-    meanND   = dc.numberDisplay("#mean"),
-    expnND   = dc.numberDisplay("#expn");
+var inlineND = new dc.NumberDisplay("#test"),
+    boxND    = new dc.NumberDisplay("#number-box"),
+    meanND   = new dc.NumberDisplay("#mean"),
+    expnND   = new dc.NumberDisplay("#expn");
 d3.csv("morley.csv").then(function(experiments) {
 
   experiments.forEach(function(x) {
