--- a/web-src/examples/row-targets.html
+++ b/web-src/examples/row-targets.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = dc.rowChart("#test");
+var chart = new dc.RowChart("#test");
 d3.csv("morley.csv").then(function(experiments) {
 
   experiments.forEach(function(x) {
