--- a/web-src/examples/scatter-brushing.html
+++ b/web-src/examples/scatter-brushing.html
@@ -20,8 +20,8 @@
   <script type="text/javascript" src="../js/dc.js"></script>
   <script type="text/javascript">
 
-var chart1 = dc.scatterPlot("#test1");
-var chart2 = dc.scatterPlot("#test2");
+var chart1 = new dc.ScatterPlot("#test1");
+var chart2 = new dc.ScatterPlot("#test2");
 var data = "x,y,z\n" +
     "1,1,3\n" +
     "5,2,11\n" +
