--- a/web-src/examples/sunburst.html
+++ b/web-src/examples/sunburst.html
@@ -30,9 +30,9 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart3 = dc.rowChart("#test3");
-var chart2 = dc.rowChart("#test2");
-var chart = dc.sunburstChart("#test");
+var chart3 = new dc.RowChart("#test3");
+var chart2 = new dc.RowChart("#test2");
+var chart = new dc.SunburstChart("#test");
 
 d3.csv("morley.csv").then(function(experiments) {
 
