--- a/web-src/resizing/resizing-scatter-brushing.html
+++ b/web-src/resizing/resizing-scatter-brushing.html
@@ -26,8 +26,8 @@ const urlParams = new URLSearchParams(window.location.search),
 
     dc.constants.EVENT_DELAY = 0;
 
-var chart1 = dc.scatterPlot("#test1");
-var chart2 = dc.scatterPlot("#test2");
+var chart1 = new dc.ScatterPlot("#test1");
+var chart2 = new dc.ScatterPlot("#test2");
 var data = "x,y,z\n" +
     "1,1,3\n" +
     "5,2,11\n" +
