--- a/web-src/transitions/ordinal-line-transitions.html
+++ b/web-src/transitions/ordinal-line-transitions.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="ordinal-transition.js"></script>
 
     <script type="text/javascript">
-      var chart = dc.lineChart('#test');
+      var chart = new dc.LineChart('#test');
       startOrdinal(function(fruitDimension, fruitGroup) {
           return chart
               .width(768)
