--- a/web-src/transitions/pie-external-label-transitions.html
+++ b/web-src/transitions/pie-external-label-transitions.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="transition-test.js"></script>
     <script type="text/javascript">
 
-      var chart = dc.pieChart("#test");
+      var chart = new dc.PieChart("#test");
       var stop, button1, button2, button3;
       d3.csv("../examples/morley.csv").then(function(experiments) {
 
