--- a/web-src/transitions/series-progression.html
+++ b/web-src/transitions/series-progression.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="transition-test.js"></script>
     <script type="text/javascript">
 
-      var chart = dc.seriesChart("#test");
+      var chart = new dc.SeriesChart("#test");
       var progression = transitionTest.progression(5, 20, true);
       var noDimension = {};
       var progressGroup = {
@@ -41,7 +41,7 @@
           .width(768)
           .height(480)
           .chart(function(c) {
-              return dc.lineChart(c)
+              return new dc.LineChart(c)
                   .curve(d3.curveCardinal)
                   .renderDataPoints(doDots);
           })
