--- a/web-src/examples/cap-and-sort-differently.html
+++ b/web-src/examples/cap-and-sort-differently.html
@@ -57,7 +57,7 @@ var chart = dc.pieChart("#test");
     }
     items.sort((a,b) => d3.ascending(a.key, b.key));
     if (chart.othersGrouper()) {
-      return chart.othersGrouper()(items, rest);
+        return chart.othersGrouper().call(chart, items, rest);
     }
     return items;
 
