--- a/web/examples/range-series.html
+++ b/web/examples/range-series.html
@@ -39,7 +39,7 @@ d3.csv("morley.csv").then(function(experiments) {
     .width(768)
     .height(480)
     .chart(function(c) { return dc.lineChart(c).curve(d3.curveCardinal).evadeDomainFilter(true); })
-    .x(d3.scaleLinear().domain([0,20]))
+        .x(d3.scaleLinear()).elasticX(true)
     .brushOn(false)
     .yAxisLabel("Measured Speed km/s")
     .yAxisPadding("5%")
@@ -60,7 +60,7 @@ d3.csv("morley.csv").then(function(experiments) {
     .width(768)
     .height(100)
     .chart(function(c) { return dc.lineChart(c).curve(d3.curveCardinal); })
-    .x(d3.scaleLinear().domain([0,20]))
+        .x(d3.scaleLinear()).elasticX(true)
     .brushOn(true)
     .xAxisLabel("Run")
     .clipPadding(10)
