use elasticX in remaining mouseZoomable examples
mitigate focus dynamic lag by removing xyTips

--- a/web/examples/focus-dynamic-interval.html
+++ b/web/examples/focus-dynamic-interval.html
@@ -157,6 +157,7 @@ if (!Array.prototype.find) {
             .xUnits(d3.timeDay)
             .brushOn(false)
             .mouseZoomable(true)
+            .xyTipsOn(false)
             .zoomScale([1, 100])
             .zoomOutRestrict(true)
             .renderVerticalGridLines(true)
