--- a/web/examples/series.html
+++ b/web/examples/series.html
@@ -35,7 +35,7 @@ d3.csv("morley.csv").then(function(experiments) {
     .width(768)
     .height(480)
     .chart(function(c) { return dc.lineChart(c).curve(d3.curveCardinal); })
-    .x(d3.scaleLinear().domain([0,20]))
+    .x(d3.scaleLinear()).elasticX(true).xAxisPadding(0.5)
     .brushOn(false)
     .yAxisLabel("Measured Speed km/s")
     .xAxisLabel("Run")
